fix icon alignment

--- a/styles/bugs.less
+++ b/styles/bugs.less
@@ -169,10 +169,12 @@ atom-bugs-panel {
 atom-bugs-schemes,
 atom-bugs-console {
   .form-control {
+    font-size: @input-font-size!important;
     background-color: @input-background-color;
     border-radius: @component-border-radius;
     color: @text-color-highlight;
     border: 1px solid @input-border-color;
+    height: 2.4rem;
     &:focus{
       background-color: @input-background-color-focus;
       border-color: @accent-color;
