--- a/styles/overlay.less
+++ b/styles/overlay.less
@@ -12,7 +12,7 @@ atom-bugs-overlay {
   display: block;
   min-width: 160px;
   max-width: 320px;
-  font-size: 90%;
+  // font-size: 90%;
   &:before {
     content: '';
     transform: rotate(135deg);
@@ -65,7 +65,7 @@ atom-bugs-inspector {
     padding: 3px 7px;
     i {
       color: @accent-color;
-      font-size: 120%;
+      // font-size: 120%;
       margin-left: 4px;
     }
     &:first-child:not(.hide){
